@@ -29,6 +29,7 @@
 - code reference was organized in packages
 - P4A_Sheet was ported to the new error handling
 - P4A_Mask::setFocus() method now checks if the passed object is an instance of P4A_Object, otherwise does nothing
+- P4A::getFocusedObjectId() method now checks if the "active_mask" object exists, otherwise returns null
 
 2.99.2
 - P4A_Mask::main() method is now called also within an AJAX call, if a full redesign is required
